fix: Fixed section clipping for projects section

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -236,10 +236,6 @@ nav, ul {
   }
 }
 
-.projects-section {
-  height: 70vh;
-}
-
 .coming-soon {
   line-height: 1.25;
   font-weight: 600;
@@ -316,6 +312,12 @@ footer {
 
   .projects-section {
     height: auto !important;
+  }
+}
+
+@media (min-width: 576px) {
+  .col-sm-8 {
+    width: auto;
   }
 }
 
